@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 d01cd2509c9803f79758ffa5a0ec621f65e6f127 ChangeLog
+SHA1 9bbedcfe580b119059297adebeb069afa406a382 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 badb68737013a80b877ca0bf8ca49677bfe7d7ce META.yml
+SHA1 8ed1a6d8fc3f0a91b2989aa6b0387b259444c912 META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 2af679880fb8ac967e5d63069f8ec3b3508425d3 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,17 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 bee2b947e57a1596ef955e4994d7379f67204814 lib/Term/Menus.pm
+SHA1 86094b1e9ffe87f73e623ccc93324c1f35a579de lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.12 (Cygwin)
+Version: GnuPG v1.4.13 (Cygwin)
 
-iEYEARECAAYFAlDh3gYACgkQJM3IZYB6aOo5EQCeO69l8ZO+LROG0h3vbtUWrUcj
-N4gAn2qGY47Az/4/rr5cllH7D8QlkngN
-=OrAS
+iQEcBAEBAgAGBQJRSzDFAAoJEN01jFj4YyZEG/IIAK3WoyC1/uMjHakcoOUilW7n
+1Koq4469eJ7j66BX9+1LGo4uejF3ysUWtMzMgPb0MjOhw5gExT6FSADoHiGrbnAl
+Ah7C8wm1HnHmhAPkp+WDzYunpoxusy1FZOIxWLDnH+MyCiCU6a5Yzys4XvnGx74a
+QCDGvfaQ8lVXDWzI9bGdvR5yDxWIpk7U2s1LGUJeI24IKc+iDIgPY4j48JT7Uf5L
+ZEMKqQjV0IdyGluoP1qmNhWHQXjC4sJ0EZKQV84vQgMksx5rPUDLuT7ogbPJjmzy
+JoW9hkya12Mwam5g0bnxjL9FoVnhirQcmpWwinbL22W60XneKm0wHRVdvFNrgTY=
+=b8gs
 -----END PGP SIGNATURE-----
