@@ -1,3 +1,10 @@
+2013-03-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.25 released.
+
+        * Added warning and hint when fa_defs.pm cannot be read.
+
+
 2012-12-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.24 released.
